// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionsActions.changeSelections Set selection change 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "apostle, apostles, apostleship",
    "selections": Array [
      Object {
        "occurrence": 1,
        "occurrences": 1,
        "text": "apostle",
      },
    ],
    "type": "CHANGE_SELECTIONS",
  },
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "apostle, apostles, apostleship",
    "invalidated": false,
    "type": "SET_INVALIDATED",
  },
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "selections": Array [
      Object {
        "occurrence": 1,
        "occurrences": 1,
        "text": "apostle",
      },
    ],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": false,
    "contextId": Object {
      "groupId": "apostle",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
]
`;

exports[`SelectionsActions.changeSelections Set selection change on different contextId 1`] = `
Array [
  Object {
    "contextId": Object {
      "groupId": "authority",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
    },
    "selections": Array [
      Object {
        "occurrence": 1,
        "occurrences": 1,
        "text": "apostle",
      },
    ],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": false,
    "contextId": Object {
      "groupId": "authority",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
]
`;

exports[`SelectionsActions.validateAllSelectionsForVerse all selections edited 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "apostle, apostles, apostleship",
    "selections": Array [],
    "type": "CHANGE_SELECTIONS",
    "userName": "dummy-test",
  },
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "apostle, apostles, apostleship",
    "invalidated": true,
    "type": "SET_INVALIDATED",
    "userName": "dummy-test",
  },
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
]
`;

exports[`SelectionsActions.validateAllSelectionsForVerse apostle selection edited 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "apostle, apostles, apostleship",
    "selections": Array [],
    "type": "CHANGE_SELECTIONS",
    "userName": "dummy-test",
  },
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "apostle, apostles, apostleship",
    "invalidated": true,
    "type": "SET_INVALIDATED",
    "userName": "dummy-test",
  },
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
]
`;

exports[`SelectionsActions.validateSelections all selections edited 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "apostle, apostles, apostleship",
    "selections": Array [],
    "type": "CHANGE_SELECTIONS",
    "userName": "dummy-test",
  },
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "apostle, apostles, apostleship",
    "invalidated": true,
    "type": "SET_INVALIDATED",
    "userName": "dummy-test",
  },
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "alertMessage": "tools.selections_invalidated",
    "type": "OPEN_ALERT_DIALOG",
  },
]
`;

exports[`SelectionsActions.validateSelections all selections edited current context 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "apostle, apostles, apostleship",
    "selections": Array [],
    "type": "CHANGE_SELECTIONS",
    "userName": "dummy-test",
  },
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "apostle, apostles, apostleship",
    "invalidated": true,
    "type": "SET_INVALIDATED",
    "userName": "dummy-test",
  },
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "alertMessage": "tools.selections_invalidated",
    "type": "OPEN_ALERT_DIALOG",
  },
]
`;

exports[`SelectionsActions.validateSelections all selections edited from different verse context 1`] = `
Array [
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "alertMessage": "tools.selections_invalidated",
    "type": "OPEN_ALERT_DIALOG",
  },
]
`;

exports[`SelectionsActions.validateSelections apostle selection edited 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "apostle, apostles, apostleship",
    "selections": Array [],
    "type": "CHANGE_SELECTIONS",
    "userName": "dummy-test",
  },
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "apostle, apostles, apostleship",
    "invalidated": true,
    "type": "SET_INVALIDATED",
    "userName": "dummy-test",
  },
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "alertMessage": "tools.selections_invalidated",
    "type": "OPEN_ALERT_DIALOG",
  },
]
`;

exports[`SelectionsActions.validateSelections god selection edited in different context 1`] = `
Array [
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "alertMessage": "tools.selections_invalidated",
    "type": "OPEN_ALERT_DIALOG",
  },
]
`;
